--- a/config/_default/params.yaml
+++ b/config/_default/params.yaml
@@ -22,7 +22,7 @@ marketing:
     description: ''
     twitter: ''
   analytics:
-    google_analytics: 'G-E646E9D7MG'
+    google_analytics: ''
     baidu_tongji: ''
     plausible: ''
     fathom: ''
